@@ -1,3 +1,11 @@
+From c40eac9 (closure):
+======================
+
+In prisim/closure.py,
+
+(*) In member function FT() of class ClosurePhaseDelaySpectrum,
+include flag weights in the Fourier transform
+
 From 256f4aa (closure):
 ======================
 
